--- a/styles.css
+++ b/styles.css
@@ -69,11 +69,15 @@ div.hamburger {
 
 div.cover{
   font-size: 5rem;
-  background: linear-gradient(rgb(21, 13, 51), white, rgb(21, 13, 51));
+  background: transparent;
   background: -webkit-linear-gradient(rgb(21, 13, 51), white, rgb(21, 13, 51));
   background: -ms-linear-gradient(rgb(21, 13, 51), white, rgb(21, 13, 51));
+  background-clip: text;
+  color: grey;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -ms-background-clip: text;
+  -ms-text-fill-color: transparent;
   align-self: center;
 }
 
